--- a/main.yml
+++ b/main.yml
@@ -3,7 +3,7 @@
   roles: 
     - do1jlr.gitea
   vars: 
-    gitea_fqdn: 'git.example.com'
-    gitea_root_url: 'https://git.example.com'
+    #gitea_fqdn: 'git.example.com'
+    #gitea_root_url: 'https://git.example.com'
     gitea_protocol: http
     gitea_start_ssh: true
